--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "electron": "^37.3.1"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.87.0",
     "electron-builder": "^26.0.12"
   }
 }
