--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "lagruta-ticket-system",
   "version": "1.0.0",
   "main": "src/main.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Brandongr90/la-gruta.git"
+  },
   "scripts": {
     "start": "electron .",
     "dev": "NODE_ENV=development electron .",
@@ -10,7 +14,8 @@
     "build-mac": "electron-builder --mac",
     "build-linux": "electron-builder --linux",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder --publish=never"
+    "dist": "electron-builder --publish=never",
+    "release": "electron-builder --win --publish always"
   },
   "build": {
     "appId": "com.lagruta.taquilla",
@@ -34,6 +39,11 @@
     "linux": {
       "target": "AppImage",
       "icon": "assets/icon.png"
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "Brandongr90",
+      "repo": "la-gruta"
     }
   },
   "keywords": [
@@ -49,6 +59,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.87.0",
-    "electron-builder": "^26.0.12"
+    "electron-builder": "^26.0.12",
+    "electron-log": "^5.4.3",
+    "electron-updater": "^6.6.2"
   }
 }
