--- a/package.json
+++ b/package.json
@@ -55,12 +55,13 @@
   "license": "MIT",
   "description": "Sistema de taquilla para el balneario La Gruta - Gestión de ventas de entradas, formas de pago y reportes diarios",
   "devDependencies": {
-    "electron": "^37.3.1"
+    "electron": "^37.3.1",
+    "electron-builder": "^26.0.12"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.87.0",
-    "electron-builder": "^26.0.12",
     "electron-log": "^5.4.3",
-    "electron-updater": "^6.6.2"
+    "electron-updater": "^6.6.2",
+    "node-thermal-printer": "^4.5.0"
   }
 }
